--- a/DaRaIndex/MainWindow.xaml
+++ b/DaRaIndex/MainWindow.xaml
@@ -46,11 +46,18 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
             <Button Grid.Column="0" Content="Получить список папок" Click="GetFoldersList_Click"/>
             <Button Grid.Column="1" Content="Индексировать выбранное" Click="IndexSelected_Click"/>
             <Button Grid.Column="2" Content="Не индексировать выбранное" Click="UnindexSelected_Click"/>
+            <StackPanel Grid.Column="3" Orientation="Vertical">
+                <DatePicker x:Name="Date"/>
+                <Button Content="Установить дату выбранному" Click="SetDateForSelected_Click"/>
+            </StackPanel>
+            
+            
         </Grid>
 
         <ListView x:Name="FoldersList" Grid.Row="1" ItemsSource="{Binding Folders, Mode=OneWay}">
